# icu

./: .gitignore  MODULE.bazel
icu4c/source/common/: BUILD.bazel  putil.cpp
icu4c/source/test/cintltst/: BUILD.bazel
icu4c/source/test/intltest/: BUILD.bazel
icu4c/source/tools/ctestfw/: BUILD.bazel
icu4c/source/tools/genccode/: BUILD.bazel
icu4c/source/tools/toolutil/: BUILD.bazel
patches/: icu4c_source_common_BUILD.bazel.patch  icu4c_source_common_putil.cpp.patch
