# © 2021 and later: Unicode, Inc. and others.
# License & terms of use: http://www.unicode.org/copyright.html

# This Bazel build file defines targets that are dependencies for building
# the gennorm2 and genprops binaries.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "toolutil",
    srcs = ["toolutil.cpp"],
    hdrs = ["toolutil.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = ["//icu4c/source/common:platform"],
)

cc_library(
    name = "unewdata",
    srcs = ["unewdata.cpp"],
    hdrs = ["unewdata.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":filestrm",
        "//icu4c/source/common:platform",
    ],
)

cc_library(
    name = "uoptions",
    srcs = ["uoptions.cpp"],
    hdrs = ["uoptions.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = ["//icu4c/source/common:platform"],
)

cc_library(
    name = "writesrc",
    srcs = ["writesrc.cpp"],
    hdrs = ["writesrc.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        "//icu4c/source/common:bytestream",
        "//icu4c/source/common:platform",
        "//icu4c/source/common:uniset_core",
    ],
)

cc_library(
    name = "uparse",
    srcs = ["uparse.cpp"],
    hdrs = ["uparse.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":filestrm",
        "//icu4c/source/common:platform",
    ],
)

cc_library(
    name = "filestrm",
    srcs = ["filestrm.cpp"],
    hdrs = ["filestrm.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = ["//icu4c/source/common:platform"],
)

cc_library(
    name = "ppucd",
    srcs = ["ppucd.cpp"],
    hdrs = ["ppucd.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":uparse",
        "//icu4c/source/common:platform",
    ],
)

cc_library(
    name = "denseranges",
    srcs = ["denseranges.cpp"],
    hdrs = ["denseranges.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = ["//icu4c/source/common:platform"],
)

cc_library(
    name = "collationinfo",
    srcs = ["collationinfo.cpp"],
    hdrs = ["collationinfo.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)

cc_library(
    name = "udbgutil",
    srcs = ["udbgutil.cpp"],
    hdrs = ["udbgutil.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)

cc_library(
    name = "ucbuf",
    srcs = ["ucbuf.cpp"],
    hdrs = ["ucbuf.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":filestrm",
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)

cc_library(
    name = "dbgutil",
    srcs = ["dbgutil.cpp"],
    hdrs = ["dbgutil.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":udbgutil",
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)

cc_library(
    name = "json_json",
    hdrs = ["json-json.hpp"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)

cc_library(
    name = "xmlparser",
    srcs = ["xmlparser.cpp"],
    hdrs = ["xmlparser.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":filestrm",
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)

cc_library(
    name = "filetools",
    srcs = ["filetools.cpp"],
    hdrs = ["filetools.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":filestrm",
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)

cc_library(
    name = "pkg_genc",
    srcs = ["pkg_genc.cpp"],
    hdrs = ["pkg_genc.h"],
    includes = ["."],
    local_defines = [
        "U_TOOLUTIL_IMPLEMENTATION",
    ],
    deps = [
        ":filestrm",
        ":filetools",
        ":toolutil",
        ":uoptions",
        "//icu4c/source/common:platform",
        "//icu4c/source/i18n:headers",
    ],
)
